client/style.css
body{
  height: 100vh;
  width: 100vw;
}

header{
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 15%;
  font-size: 12px;
}

.sub-header{
  height: 20%;
}

.main-header{
  height: 80%;

}

.hover:hover{
  cursor: pointer;
}

.list-inline  li, .list-inline {
  display: inline;
  margin-left: 10px;
}

.logo-and-drop{
  flex-direction: column;
}
.drop-down{
  font-size: 1rem;
}

.icons{
  font-size: 1.5rem;
}

.hero{
  height: 70%;

}

.single-item  img{
  width: 100%
}

.grad {
  background: linear-gradient(-45deg, #8be1de, #589faa, #6cbabf, #447c89);
  height: 1rem;
}

.item-icon{
  transition: transform .2s;
}

.item-icon:hover {
  transform: scale(1.055);
}

.departments{
  height: 38%;
  background-color: #f1f1f1;
}

.department-icon{
  transition: transform .2s;
}

.item-icon:hover {
  transform: scale(1.055);
  background-color: white;

}

#button-expand{
  background-color: #fff;
  border: .1rem solid #979797;
  cursor: pointer;
  padding: 1rem 2rem;
  margin-top: 3rem;
  border-radius: .3rem;
  transition: 1s;

}

.hidden{
  display: none!important;
}

footer{
  height: 40%;
}

.expand{
  height: 60%;
  transition: 1s;
}

.footer-small{
  height: 15%;
}

.footer-med{
  height: 20%;
}

.footer-big{
  height: 65%;
}

